Added JVM options file for sbt